# b402-solana

./: .gcloudignore  .gitignore  .npmrc  .railwayignore  AGENTS.md  Anchor.toml  BUILD-STATE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ENGINEER-REVIEW.md  LICENSE  README.md  SECURITY.md  TOKEN2022_DEPLOY.md  cloudbuild-relayer.yaml  cloudbuild.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json
.github/: dependabot.yml
.github/workflows/: ci.yml  paysh-send-uptime.yml
apps/paysh-demo-server/: .dockerignore  Dockerfile  README.md  package.json  tsconfig.json
apps/playground/: README.md  package.json  tsconfig.json
apps/private-dca/: .gitignore  PRD.md  README.md  baseline-cli.ts  cli.ts  package.json  render-comparison.ts  tsconfig.json  vitest.config.ts
apps/sealed-bid/: .gitignore  Anchor.toml  Arcium.toml  package.json  pnpm-lock.yaml
b402-assurance/: README.md
b402-assurance/prds/: PRD-A01-assurance-architecture.md  PRD-A02-parity-vectors.md  PRD-A03-property-invariant-testing.md  PRD-A04-fuzzing.md  PRD-A05-benchmarks-budgets.md  PRD-A06-formal-verification-readiness.md
circuits/: adapt.circom  adapt_v2.circom  package.json  transact.circom  tsconfig.json  vitest.config.ts
circuits/lib/: commitment.circom  merkle_verify.circom  nullifier.circom  range_check.circom  spending_pub.circom
circuits/scripts/: compile-adapt-v2.sh  compile-adapt.sh  compile.sh  gen-test-proof-adapt-v2.mjs  gen-test-proof-adapt.mjs  gen-test-proof.mjs  phase9-ceremony.sh  throwaway-ceremony-adapt-v2.sh  throwaway-ceremony-adapt.sh  throwaway-ceremony.sh  vk-to-rust.mjs
circuits/tests/: adapt.test.ts  adapt_v2.test.ts  helpers.ts  parity.test.ts  primitives.test.ts  prove-verify.test.ts  transact.test.ts
docs/: PHASE-2.md  REPRODUCE.md  SUBMISSION.md  TX-WALKTHROUGH.md  getting-started.md  percolator-fork-runbook.md
docs-site/: README.md  docs.json  introduction.mdx  mint.json  quickstart.mdx
docs-site/adapters/: adrena.mdx  building-an-adapter.mdx  jupiter.mdx  kamino.mdx  orca.mdx  overview.mdx
docs-site/assurance/: benchmarks.mdx  fuzzing.mdx  methodology.mdx  parity-vectors.mdx  property-invariants.mdx
docs-site/concepts/: composability.mdx  privacy-model.mdx  shielded-pool.mdx  (+2 more)
examples/: agent-delegated-private-swap.ts  check-mainnet-state.mjs  check-surfpool.mjs  devnet-init.ts  e2e.ts  falcon-intent-roundtrip.ts  hosted-relayer-smoke.ts  indexer-smoke.mjs  kamino-adapter-fork-deposit.ts  kamino-adapter-fork-per-user.mjs  kamino-fork-deposit.ts  kamino-fork-direct-probe.ts  kamino-fork-probe.ts  mainnet-add-kusdc-token-cfg.mjs  mainnet-init.ts  mainnet-kamino-lend-demo.mjs  mainnet-smoke.ts  package.json  paysh-private-receivables-e2e.ts  paysh-send-client.ts  paysh-x402-client-only.ts  paysh-x402-real-usdc-e2e.ts  paysh-x402-server-only.ts  percolator-adapter-fork.mjs  percolator-multi-user-smoke.mjs  percolator-open-close.mjs  quickstart-private-lend.ts  quickstart-private-swap.ts  register-mint-devnet.ts  scanner-e2e.ts  sdk-quick-swap.ts  sdk-quick.ts  swap-e2e-jupiter.ts  swap-e2e-pump.ts  swap-e2e.ts
ops/: MAINNET-DEPLOY-RUNBOOK.md  inject-usdc-ata.ts  jup-quote.ts  kamino-clone.ts  local-validator.sh  mainnet-deploy.sh  mainnet-fork-validator.sh  mainnet-init.sh  phase9-devnet-upgrade.sh  prd-35-mainnet-deploy.sh  pre-deploy-check.sh  publish-mainnet-alt.ts  setup-kamino-fork.sh  smoke-validator.sh
programs/b402-adrena-adapter/: Cargo.toml
programs/b402-adrena-adapter/src/: lib.rs
programs/b402-adrena-adapter/tests/: handler_red.rs  payload.rs
programs/b402-jupiter-adapter/: Cargo.toml
programs/b402-jupiter-adapter/src/: lib.rs
programs/b402-jupiter-adapter/tests/: payload.rs
programs/b402-jupiter-perps-adapter/: Cargo.toml
programs/b402-jupiter-perps-adapter/src/: lib.rs
programs/b402-jupiter-perps-adapter/tests/: handler_red.rs  payload.rs
programs/b402-kamino-adapter/: Cargo.toml
programs/b402-kamino-adapter/src/: lib.rs
programs/b402-kamino-adapter/tests/: handler_red.rs  payload.rs  per_user_payload.rs
programs/b402-mock-adapter/: Cargo.toml
programs/b402-mock-adapter/src/: lib.rs
programs/b402-nullifier/: Cargo.toml
programs/b402-nullifier/src/: lib.rs  sdk.rs
programs/b402-nullifier/tests/: test.rs
programs/b402-orca-adapter/: Cargo.toml
programs/b402-orca-adapter/src/: lib.rs
programs/b402-orca-adapter/tests/: handler_red.rs  payload.rs
programs/b402-percolator-adapter/: Cargo.toml
programs/b402-percolator-adapter/src/: cpi.rs  error.rs  lib.rs  mapping.rs  payload.rs  pda.rs  percolator_ix.rs  slab.rs
programs/b402-percolator-adapter/src/actions/: close.rs  mod.rs  open.rs
programs/b402-percolator-adapter/tests/: mapping_proptest.proptest-regressions  mapping_proptest.rs
programs/b402-phoenix-adapter/: Cargo.toml
programs/b402-phoenix-adapter/src/: lib.rs
programs/b402-pool/: Cargo.toml
programs/b402-pool/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs  util.rs
programs/b402-pool/src/instructions/: adapt_execute.rs  adapt_execute_v2.rs  adapt_mock.rs  add_token_config.rs  admin.rs  commit_inputs.rs  init_pool.rs  mod.rs  nullifier_cpi.rs  shield.rs  token_ext.rs  transact.rs  unshield.rs  verifier_cpi.rs
programs/b402-verifier-adapt/: Cargo.toml
programs/b402-verifier-adapt-v2/: Cargo.toml
programs/b402-verifier-adapt-v2/src/: lib.rs  vk.rs
programs/b402-verifier-adapt-v2/tests/: verify.rs
programs/b402-verifier-adapt/src/: lib.rs  vk.rs
programs/b402-verifier-adapt/tests/: account_layout_parity.rs  verify.rs
programs/b402-verifier-transact/: Cargo.toml
programs/b402-verifier-transact/src/: lib.rs  vk.rs
programs/b402-verifier-transact/tests/: verify.rs
scripts/: build-all.sh  inspect-tx.mjs  phase7-wire-size.mjs
tests/onchain/: Cargo.toml
tests/onchain/src/: discriminator.rs  fixtures.rs  harness.rs  ids.rs  lib.rs  mint.rs  shield_ix.rs  unshield_ix.rs
tests/onchain/tests/: adapt_delta.rs  adapt_execute.rs  kamino_deposit.rs  percolator_open_close.rs  phoenix_swap.rs  shield.rs  token_2022_add_config.rs  unshield.rs
(+122 files in other folders)
