[workspace]
resolver = "2"
members = [
    "programs/b402-pool",
    "programs/b402-verifier-transact",
    "programs/b402-jupiter-adapter",
    "programs/b402-mock-adapter",
    "packages/crypto",
]
# `tests/onchain` is intentionally NOT in this workspace. It uses litesvm which
# wants `indexmap >=2.12`, conflicting with the SBF-build `=2.9.0` pin required
# by Solana's bundled rustc 1.84.1. Running its tests uses its own Cargo.lock:
#   cargo test --manifest-path tests/onchain/Cargo.toml
exclude = ["tests/onchain"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["b402 core <contact@b402.ai>"]
license = "UNLICENSED"
repository = "https://github.com/b402-ai/b402-solana"

[workspace.dependencies]
# Pinned to stay below edition2024-requiring releases until solana's bundled rustc bumps.
indexmap = "=2.9.0"

anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~2.0"
spl-token = "6.0"
thiserror = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
groth16-solana = "0.1.0"
light-poseidon = "0.4"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
