[workspace]
resolver = "2"
members = [
    "programs/b402-pool",
    "programs/b402-verifier-transact",
    "programs/b402-verifier-adapt",
    "programs/b402-jupiter-adapter",
    "programs/b402-jupiter-perps-adapter",
    "programs/b402-mock-adapter",
    "programs/b402-kamino-adapter",
    "programs/b402-orca-adapter",
    "programs/b402-adrena-adapter",
    "packages/crypto",
]
# `tests/onchain` is intentionally NOT in this workspace. It uses litesvm which
# wants `indexmap >=2.12`, conflicting with the SBF-build `=2.9.0` pin required
# by Solana's bundled rustc 1.84.1. Running its tests uses its own Cargo.lock:
#   cargo test --manifest-path tests/onchain/Cargo.toml
#
# `programs/b402-nullifier` is intentionally NOT in this workspace either. It
# pins anchor-lang 0.31.1 (light-sdk's required version) while the rest of the
# workspace pins anchor-lang 0.30.1 for our mainnet-deployed b402_pool. Build
# standalone with its own Cargo.lock:
#   cargo build-sbf --manifest-path programs/b402-nullifier/Cargo.toml
# b402_pool CPIs to b402-nullifier via raw invoke_signed — no shared Rust dep.
exclude = ["tests/onchain", "programs/b402-nullifier"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["b402 core <contact@b402.ai>"]
license = "UNLICENSED"
repository = "https://github.com/b402-ai/b402-solana"

# Allow Anchor + Solana SBF-only cfg flags when clippy runs on the host.
# These are defined in the SBF target only; rustc's check-cfg lints them
# as unknown when we run `cargo clippy` from the host. Adding them to the
# known list quiets the noise without disabling the lint itself.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("anchor-debug"))',
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("custom-panic"))',
  'cfg(feature, values("custom-heap"))',
] }
# Anchor's `#[program]` macro emits a glob `pub use` that overlaps with our
# explicit re-exports in instructions/mod.rs. Explicit wins (verified — no
# behavior change), the warning is just informational.
ambiguous_glob_reexports = "allow"

# Cosmetic / Anchor-emitted lints we deliberately don't fail CI on.
# Touching program code with auto-fixes pre-mainnet is the wrong tradeoff;
# revisit post-audit.
[workspace.lints.clippy]
doc_overindented_list_items = "allow"
cloned_ref_to_slice_refs = "allow"


[workspace.dependencies]
# Pinned to stay below edition2024-requiring releases until solana's bundled rustc bumps.
indexmap = "=2.9.0"

anchor-lang = "1.0.2"
anchor-spl = "0.30.1"
solana-program = "~2.0"
spl-token = "6.0"
thiserror = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
groth16-solana = "0.1.0"
light-poseidon = "0.4"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
