[package]
name = "b402-jupiter-perps-adapter"
version.workspace = true
edition.workspace = true
description = "b402 Jupiter Perpetuals adapter (per PRD-0X — TDD scaffold)"

[lib]
crate-type = ["cdylib", "lib"]
name = "b402_jupiter_perps_adapter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
