[package]
name = "b402-kamino-adapter"
version.workspace = true
edition.workspace = true
description = "b402 Kamino lend/borrow adapter (per PRD-09)"

[lib]
crate-type = ["cdylib", "lib"]
name = "b402_kamino_adapter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
indexmap = { version = "=2.9.0" }

[lints]
workspace = true
