[package]
name = "b402-kamino-adapter"
version.workspace = true
edition.workspace = true
description = "b402 Kamino lend/borrow adapter (per PRD-09)"

[lib]
crate-type = ["cdylib", "lib"]
name = "b402_kamino_adapter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# PRD-33 Phase 33.2: per-user Kamino obligation. When enabled, the action
# payload's leading 32 B are interpreted as the user's viewing_pub_hash
# (= bytes_le(outSpendingPub) from the Phase 9 adapt proof). The adapter
# derives `owner_pda = PDA(["b402/v1", "adapter-owner", viewing_pub_hash],
# adapter_program_id)` and uses it as the Kamino obligation owner via
# dual-signer-seed invoke_signed. Default OFF — the v0.1 mainnet alpha
# binary still uses adapter_authority as the single shared obligation
# owner. Default flips after fork-test sign-off + mainnet redeploy
# (PRD-33 Phase 33.4).
per_user_obligation = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
indexmap = { version = "=2.9.0" }

[lints]
workspace = true
