[package]
name = "b402-mock-adapter"
version.workspace = true
edition.workspace = true
description = "Mock DeFi adapter for b402 pool balance-delta tests. TEST-ONLY — do not deploy to mainnet."

[lib]
crate-type = ["cdylib", "lib"]
name = "b402_mock_adapter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
indexmap = { version = "=2.9.0" }
