[package]
name = "b402-nullifier"
version = "0.0.1"
description = "b402 fork of Lightprotocol/nullifier-program — domain-tagged nullifier insertion via Light's address tree"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mmchougule/b402-solana"

[lib]
crate-type = ["cdylib", "lib"]
name = "b402_nullifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
light-sdk = { version = "0.23.0", features = ["anchor", "cpi-context"] }
light-hasher = "5.0.0"
# Pin indexmap below 2.10 — solana's bundled rustc (1.84) doesn't support
# the edition2024 feature that 2.10+ requires. Same constraint as the
# main workspace's [workspace.dependencies] pin.
indexmap = "=2.9.0"

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "2.2"
light-program-test = "0.23.0"

[dev-dependencies]
light-client = "0.23.0"
tokio = "1.49.0"
blake3 = "=1.8.2"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
