[package]
name = "b402-orca-adapter"
version.workspace = true
edition.workspace = true
description = "b402 Orca whirlpool LP adapter (per PRD-0X — TDD scaffold)"

[lib]
crate-type = ["cdylib", "lib"]
name = "b402_orca_adapter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true

[lints]
workspace = true
