[package]
name = "b402-pool"
version.workspace = true
edition.workspace = true
description = "b402 shielded pool program"

[lib]
crate-type = ["cdylib", "lib"]
name = "b402_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# TEST-ONLY: gates the `check_adapter_delta_mock` instruction + `adapt_mock` module.
# MUST NOT be enabled in devnet or mainnet builds. CI turns it on only for
# running the adapt-delta invariant tests against litesvm.
test-mock = []
# Phase 7: pool CPIs into b402_nullifier::create_nullifier instead of relying
# on a sibling ix verified through the instructions sysvar. Cuts ~150 wire B
# (full b402_nullifier sibling ix preamble) per unshield/swap/lend tx.
# Pairs with `b402-nullifier --features cpi-only`. Both programs MUST be
# upgraded together: pool inline + nullifier sibling-mode crashes (no
# instructions sysvar in inner CPI), and pool sibling + nullifier cpi-only
# crashes (caller-program check rejects non-pool callers).
inline_cpi_nullifier = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
indexmap = { version = "=2.9.0" }

[lints]
workspace = true
