[package]
name = "b402-pool"
version.workspace = true
edition.workspace = true
description = "b402 shielded pool program"

[lib]
crate-type = ["cdylib", "lib"]
name = "b402_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# TEST-ONLY: gates the `check_adapter_delta_mock` instruction + `adapt_mock` module.
# MUST NOT be enabled in devnet or mainnet builds. CI turns it on only for
# running the adapt-delta invariant tests against litesvm.
test-mock = []
# Phase 7: pool CPIs into b402_nullifier::create_nullifier instead of relying
# on a sibling ix verified through the instructions sysvar. Cuts ~150 wire B
# (full b402_nullifier sibling ix preamble) per unshield/swap/lend tx.
# Pairs with `b402-nullifier --features cpi-only`. Both programs MUST be
# upgraded together: pool inline + nullifier sibling-mode crashes (no
# instructions sysvar in inner CPI), and pool sibling + nullifier cpi-only
# crashes (caller-program check rejects non-pool callers).
inline_cpi_nullifier = []
# Phase 9: dual-note minting via outSpendingPub-bound excess commitment.
# Bumps adapt-circuit public-input count 23 → 24, adds `out_spending_pub` to
# AdaptPublicInputs, and mints commitment_b for actual-out > expected-out.
# Requires the matching Phase 9 trusted-setup VK in b402-verifier-adapt
# (build that crate with the same feature flag). DEFAULT OFF — without
# the feature, builds produce the Phase 7B 23-input shape that matches the
# currently deployed verifier program. Enabling on the deployed mainnet
# pool without redeploying the verifier with a regenerated VK rejects
# every adapt proof.
phase_9_dual_note = []
# PRD-35: read Groth16 public inputs from per-user pending_inputs PDA
# instead of carrying them inline in the verifier ix data. Saves
# ~700-735 B per privateSwap/privateLend tx, lifting the v0-tx 1232 B
# ceiling. Pairs with `b402-verifier-adapt --features phase_9_dual_note`
# (the new ix variant lives in the same verifier crate). Default OFF
# while the new path is being smoked; flip default ON in a follow-up
# commit once fork e2e is green.
prd_35_pending_inputs = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
indexmap = { version = "=2.9.0" }

[lints]
workspace = true
