[package]
name = "b402-verifier-adapt"
version.workspace = true
edition.workspace = true
description = "b402 Groth16 verifier for the adapt circuit (Phase 2)"

[lib]
crate-type = ["cdylib", "lib"]
name = "b402_verifier_adapt"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# Phase 9: 24-input shape (adds outSpendingPub[0] alias). Pairs with
# b402-pool `--features phase_9_dual_note`. The VK in vk.rs is Phase 7B
# (23-input); the Phase 9 VK lands together with this feature flip after
# the trusted-setup ceremony.
phase_9_dual_note = []

[dependencies]
anchor-lang.workspace = true
groth16-solana.workspace = true
solana-program.workspace = true
thiserror.workspace = true
indexmap = { version = "=2.14.0" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[lints]
workspace = true
