[package]
name = "b402-onchain-tests"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
doctest = false

[dependencies]
litesvm = "0.11"
# Pin split-crate versions to what litesvm 0.11 uses internally.
solana-account = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-message = "3"
solana-pubkey = "3"
solana-signer = "3"
solana-system-interface = "2"
solana-transaction = "3"
solana-compute-budget-interface = "3"
spl-token = "7"
spl-associated-token-account = "6"
borsh = "1"
bytemuck = { version = "1.16", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
